springboot-k8s-yaml-main/acr-deployment.yaml
 # https://docs.microsoft.com/en-us/azure/aks/http-application-routing
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-k8s-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: springboot-k8s.493189b569724406b0ad.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: springboot-k8s-svc
            port: 
              number: 32000
